Fixed header alignment and corrected text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,10 +48,13 @@ label {
     background-color: white;
     box-shadow: 0px 2px 5px grey;
     position: relative;
+    width:97%;
+    padding: 1% 2%;
 }
 
 #logo {
-    flex: 1 1 0;
+    width: 25%;
+    align-self: center;
 }
 
 #header-logo {
@@ -60,24 +63,30 @@ label {
 
 /* Navigation Links */
 #header-nav {
+    width: 75%;
+    flex-grow:2;
+    display:block;
     text-transform: uppercase;
 }
 
-#user-options {
-    display: flex;
-    justify-content: flex-end;
-}
-
-#nav-links {
-    min-width: 1000px;
+.nav-options {
     display: flex;
     justify-content: flex-end;
 }
 
 .nav {
-    display: inline-block;
-    margin: auto 1%;
-    padding: 1% 2%;
+    text-align: right;
+    font-size: 14px;
+    padding: 1% 1%;
+    white-space: nowrap;
+}
+
+.login {
+    color: #1693f3;
+}
+
+.nav-text {
+    width: 0px;
 }
 
 .nav:hover {
